# flowstack

./: .gitignore  pyproject.toml
flowstack/: pyproject.toml
flowstack-core/: pyproject.toml
flowstack-core/flowstack/core/: __init__.py  actions.py  machine.py  types.py  workflow.py
flowstack-core/flowstack/core/ioc/: __init__.py  container.py  types.py
flowstack-core/flowstack/core/typing/: __init__.py  dicts.py  registry.py  types.py
flowstack-core/flowstack/core/utils/: constants.py  func.py  reflection.py  string.py
flowstack/flowstack/ai/: __init__.py  audio_generator.py  audio_transcriber.py  chat_generator.py  embedder.py  image_classifier.py  image_extractor.py  image_generator.py  llm.py  structured_llm.py  summarizer.py  text_classifier.py  tool_llm.py
flowstack/flowstack/artifact_parsers/: base.py  utils.py
flowstack/flowstack/artifact_parsers/text/: __init__.py  sentence.py  utils.py
flowstack/flowstack/artifacts/: __init__.py  base.py  blob.py  link.py  table.py  text.py
flowstack/flowstack/auth/: __init__.py  secrets.py
flowstack/flowstack/loaders/: __init__.py  base.py
flowstack/flowstack/messages/: __init__.py  any.py  assistant.py  base.py  system.py  tool.py  user.py  utils.py
flowstack/flowstack/prompts/: __init__.py  image_prompt.py  prompt_stack.py
flowstack/flowstack/retrievers/: base.py
flowstack/flowstack/stores/graph/: base.py  simple.py
flowstack/flowstack/stores/vector/: base.py  simple.py  typing.py
flowstack/flowstack/typing/: __init__.py  ai.py  filtering.py  types.py
integrations/anthropic/: pyproject.toml
integrations/anthropic/flowstack/anthropic/: __init__.py  llm.py
integrations/cohere/: pyproject.toml
integrations/cohere/flowstack/cohere/: __init__.py  embedder.py  llm.py
integrations/fireworks/: pyproject.toml
integrations/fireworks/flowstack/fireworks/: __init__.py  llm.py
integrations/huggingface-hub/: pyproject.toml
integrations/huggingface-hub/flowstack/huggingface_hub/: __init__.py  llm.py
integrations/huggingface-pipleline/: pyproject.toml
integrations/huggingface-pipleline/flowstack/huggingface_pipeline/: __init__.py  llm.py
integrations/litellm/: pyproject.toml
integrations/litellm/flowstack/litellm/: __init__.py  llm.py
integrations/milvus/: pyproject.toml
integrations/milvus/flowstack/milvus/: __init__.py  typing.py  utils.py  vector_store.py
integrations/ollama/: pyproject.toml
integrations/ollama/flowstack/ollama/: llm.py
integrations/openai/: pyproject.toml
integrations/openai/flowstack/openai/: __init__.py  chat_generator.py  embedder.py  llm.py
integrations/tavily/: pyproject.toml
integrations/tavily/flowstack/tavily/: retriever.py
integrations/wikipedia/flowstack/wikipedia/: __init__.py  loader.py  retriever.py
integrations/xinference/: pyproject.toml
integrations/xinference/flowstack/xinference/: __init__.py  llm.py
