[tool.poetry]
name = "flowstack-anthropic"
version = "0.1.0"
description = ""
authors = ["bensg <gabay67890@gmail.com>"]
packages = [{ include = "flowstack" }]

[tool.poetry.dependencies]
python = "^3.12"
flowstack = { path = "../../flowstack/" }
anthropic = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
