[tool.poetry]
name = "flowstack-huggingface-pipleline"
version = "0.1.0"
description = ""
authors = ["bensg <gabay67890@gmail.com>"]
packages = [{ include = "flowstack" }]

[tool.poetry.dependencies]
python = "^3.12"
flowstack-huggingface-hub = { path = "../huggingface-hub/" }
transformers = "^4.44.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
