[tool.poetry]
name = "flowstack-openai"
version = "0.1.0"
description = ""
authors = ["bensg <gabay67890@gmail.com>"]
packages = [{ include = "flowstack" }]

[tool.poetry.dependencies]
python = "^3.12"
flowstack = { path = "../../flowstack/" }
openai = "^1.40.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
